@@ -7,6 +7,11 @@ ProfileCommands.swift - changed delete(_:name:callback:) to a class func
 ProfileCommands.swift - changed save(_:name:callback:) to a class func
 Radio.swift - in parseStatus(_:), in .profile changed parseProperties to parseStatus
 Notifications.swift - removed all profile related notifications, add .profileHasBeenAdded & .profileWillBeRemoved
+Profile.swift - changed "list' to be get-only
+Radio.swift - changed _filterCwAutoLevel, _filterVoiceAutoLevel, _filterDigitalAutoLevel from Int to Bool
+Radio.swift - changed _filter--AutoLevel to _filter--AutoEnabled
+RadioCommands.swift - changed filter--AutoLevel to filter--AutoEnabled
+Radio.swift - corrected parseFilterProperties(_:), removed -- = false from .level case
 
 v2.1.1
 
